docs/changes/0.9.0/characters/Little Mac.md
# Little Mac — 0.9.0

## Changes

### Jab / Tilts

**Jab**
all jab sdi multiplier: 1 → .4
jab 3 first active frame: 7 → 5
jab 3 damage: 6 → 5
jab 1 startup sped up 2x
jab 1 bkb: 25 → 35
jab 2 startup sped up 1.5x

**Forward Tilt**
2nd hit hitbox size: 6 → 7
added momentum boost between 1st and 2nd hit
first hit damage: 4 → 6
startup sped up: 1.6 → 1.8x
first hit angle: 361 → 290
no longer jab locks
between hits sped up 1.3x

**Up Tilt**
first active frame: 7 → 4
damage: 9 → 8

**Down Tilt**
angle: 65 → 75
damage: 11 → 9

### Aerial Attacks

**Up Air**
endlag sped up 1.4x

**Down Air**
bkb: 15 → 30
kbg: 50 → 25

### Smash Attacks

**Forward Smash**
damage: 19 → 21

**Up Smash**
new changes removes his massive slide when up smashing out of run

**Down Smash**
bkb: 20 → 30

### Special Moves

**Neutral B**
KO punch hitbox sizes: 15 → 7
KO punch massively rebalanced
damage: 35 → 23
bkb: 130 → 90
kbg: 30 → 45
KO punch sdi multiplier: 1.5 → .2
haymaker startup sped up 1.4x
lvl 1 haymaker charge attack sped up 1.3x
can no longer attack cancel

**Side B**
damage: 15 → 16
angle: 365 → 35
kbg: 75 → 83

**Up B**
sped up: 1.4x → 1.5x
multihits reduced and sdi multiplier: .8 → .2
can now cancel with a double jump
kbg: 100 → 80
can no longer jump cancel up b in the air, can only cancel it if done from the ground

**Down B**
can't attack cancel until frame 15

### Other

**Dash Attack**
bkb: 35 → 50

**Up Throw**
kbg: 30 → 70
bkb: 80 → 50

**Down Throw**
angle: 65 → 75

can now instantly cancel drop shield into movement and attacks

little mac has a massive animation and model overhaul. this does affect some moves somewhat but he largely plays the same.

Massive overhaul, now uses PMEX mac as a base, tried to ensure he plays largely the same

made slightly larger

### Character Parameters

| Parameter | Change |
|-----------|--------|
| Weight | 68 → 89 |
| Forward Roll Cancel Frame | 9 → 7 |
| Airdodge Endlag | sped up 1.4x |
